<resources>
    <string name="app_name">Ling-O-Ragon</string>

    <string name="btnStart">Start</string>
    <string name="btnTrivias">Trivia</string>
    <string name="btnSettings">Settings</string>
    <string name="btnExit">Exit</string>
    <string name="txtBack">Back</string>
    <string name="txtSettings">Settings</string>
    <string name="btnLanguage">Language</string>
    <string name="btnAbout">About Us</string>
    <string name="btnFeedbackAndSuggestions">Feedback And Suggestions</string>
    <string name="btnFilipino">Filipino</string>
    <string name="btnEnglish">English</string>
    <string name="txtTell">Contact us and tell us what concerns you.</string>
    <string name="txtHelp">This might help us improve this app :)</string>
    <string name="btnSend">Send</string>
    <string name="btnGreetings">Greetings</string>
    <string name="btnNumbers">Numbers and Sizes</string>
    <string name="btnTime">Date and Time</string>
    <string name="txtTranslate">Translate</string>
    <string name="txtNext">next</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_logout">Logout</string>
    <string name="action_devinfo">Developer</string>
    <string name="share_app" translatable="false">Share App</string>
    <string name="language_setting">Change Language</string>
    <string name="action_change_pass">Change Password</string>
    <string name="lang_select">Language Select</string>
    <string name="tutorial">Tutorial</string>

    //Alert dialogs
    <string name="exitLing">Exit Ling-O-Ragon</string>
    <string name="exitcontent">Are you sure you want to exit?</string>
    <string name="greetingsStage">Greetings Stage!</string>
    <string name="numbersStage">Numbers and Sizes Stage!</string>
    <string name="dateStage">Date and Time Stage!</string>
    <string name="gcontent">Are you ready?</string>
    <string name="wewe">The correct translation is</string>
    <string name="congrats">Congratulations!</string>
    <string name="congratscontent_one">You have earned 50 stars</string>
    <string name="congratscontent_two">You have earned 75 stars</string>
    <string name="oops">Oooppss. You did not answer all correctly</string>
    <string name="oopscontent">Restart Game?</string>
    <string name="cont">Continue?</string>
    <string name="selectLang">Select Language</string>
    <string name="selectedEng">You have selected English</string>
    <string name="selectedFil">Ang pinili mo ay Filipino</string>


    //questions
    //level one stage one
    <string name="oneone"><b>Daghang</b> salamat sa mga regalo.</string>
    <string name="onetwo"><b>Dios mabalos</b> sa bigay mo na sapatos.</string>
    <string name="onethree"><b>Magandang umaga</b> sa inyong lahat.</string>
    <string name="onefour"><b>Magandang Hapon</b>.</string>
    <string name="onefive">Pakiluway-luwayan man <b>tabi</b> an pagtaram mo.</string>
    <string name="onesix"><b>Mahal kita</b>.</string>
    <string name="oneseven"><b>Marhay na banggi</b>.</string>
    <string name="oneeight"><b>Paaram</b> sa inyong lahat.</string>
    <string name="onenine"><b>Dios mabalos</b>.</string>
    <string name="oneten"><b>Patawarun mo ako</b>.</string>
    <string name="oneeleven"><b>Tuloy</b> kayo.</string>
    <string name="onetwelve"><b>Oo</b>, mabuti naman kami.</string>
    <string name="onethirteen"><b>Marhay na banggi</b> daragang magayon.</string>
    <string name="onefourteen"><b>Marhay man</b>.</string>
    <string name="onefifteen"><b>Hindi</b>, ayos lang.</string>

    <!-- alert dialog correct translation Stage 1-->
    <string name="toneone">The correct translation is <b>Maraming salamat sa mga regalo.</b></string>
    <string name="tonetwo">The correct translation is <b>Salamat sa bigay mo na sapatos.</b></string>
    <string name="tonethree">The correct translation is <b>Marhay na aga sa inyong lahat.</b></string>
    <string name="tonefour">The correct translation is <b>Marhay na hapon.</b></string>
    <string name="tonefive">The correct translation is <b>Please, bagalan mo ang pagsasalita.</b></string>
    <string name="tonesix">The correct translation is <b>Namomotan ta ka.</b></string>
    <string name="toneseven">The correct translation is <b>Magandang gabi.</b></string>
    <string name="toneeight">The correct translation is <b>Paalam sa inyong lahat.</b></string>
    <string name="tonenine">The correct translation is <b>Salamat.</b></string>
    <string name="toneten">The correct translation is <b>Patawarin mo ako.</b></string>
    <string name="toneeleven">The correct translation is <b>Dagos kayo.</b></string>
    <string name="tonetwelve">The correct translation is <b>Iyo.</b></string>
    <string name="tonethirteen">The correct translation is <b>Magandang gabi magandang dalaga.</b></string>
    <string name="tonefourteen">The correct translation is <b>Mabuti naman.</b></string>
    <string name="tonefifteen">The correct translation is <b>Dai.</b></string>


    <!--alert dialog correct translation Stage 2-->
    //level one stage two
    <string name="ttwoone">The correct translation is <b>Unum.</b></string>
    <string name="ttwotwo">The correct translation is <b>Duwa.</b></string>
    <string name="ttwothree">The correct translation is <b>Sampung malalaking isda.</b></string>
    <string name="ttwofour">The correct translation is <b>Mahaba.</b></string>
    <string name="ttwofive">The correct translation is <b>Dakula.</b></string>
    <string name="ttwosix">The correct translation is <b>Tulo.</b></string>
    <string name="ttwoseven">The correct translation is <b>Maniwang.</b></string>
    <string name="ttwoeight">The correct translation is <b>Isang isda.</b></string>
    <string name="ttwonine">The correct translation is <b>Dalawang magkapatid.</b></string>
    <string name="ttwoten">The correct translation is <b>Malawak ang bukid ni lolo.</b></string>
    <string name="ttwoeleven">The correct translation is <b>Matangkad.</b></string>

    //level one stage two
    <string name="twoone"><b>Anim</b>.</string>
    <string name="twotwo"><b>Dalawa</b>.</string>
    <string name="twothree"><b>Sampulung dakulang sira</b>.</string>
    <string name="twofour"><b>Halaba</b>.</string>
    <string name="twofive"><b>Malaki</b>.</string>
    <string name="twosix"><b>Tatlo</b>.</string>
    <string name="twoseven"><b>Manipis</b>.</string>
    <string name="twoeight"><b>Sarong</b> sira.</string>
    <string name="twonine"><b>Duwa</b>ng tugang.</string>
    <string name="twoten"><b>Mahiwas an bukid nin lolo</b>.</string>
    <string name="twoeleven"><b>Halangkaw</b>.</string>


    //level one stage three
    <string name="threeone">Marhay na <b>aga</b>.</string>
    <string name="threetwo"><b>Banggi</b>.</string>
    <string name="threethree">Maiba ako sa palengke pagkagising <b>sa-aga</b>.</string>
    <string name="threefour">Magsikaon kamo sa hapag mamayang <b>hapon</b>.</string>
    <string name="threefive">Nadangog mo ba su huni nin uwak <b>kasubanggi</b>.</string>
    <string name="threesix">Saen ka mabakal nin gulay <b>atyan</b>.</string>
    <string name="threeseven"><b>Madiklom </b>an bangging hararom.</string>
    <string name="threeeight">Malaad an buwan tuwing <b>matanga</b>.</string>
    <string name="threenine"><b>Mainit</b>.</string>




    <!-- alert dialogs level one stage three-->
    <string name="tthreeone">The correct translation is <b>Magandang Umaga</b>.</string>
    <string name="tthreetwo">The correct translation is <b>Gabi</b>.</string>
    <string name="tthreethree">The correct translation is <b>Pupunta ako sa palengke pagkagising bukas</b>.</string>
    <string name="tthreefour">The correct translation is <b>Kumain kayo sa mesa mamayang hapon</b>.</string>
    <string name="tthreefive">The correct translation is <b>Narinig mo ba ang tuko kagabi</b>.</string>
    <string name="tthreesix">The correct translation is <b>San ka bibili ng gluay mamaya</b>?</string>
    <string name="tthreeseven">The correct translation is <b>Madilim ang gabing malalim</b>.</string>
    <string name="tthreeeight">The correct translation is <b>Maliwanag ang buwan tuwing hatinggabi</b>.</string>
    <string name="tthreenine">The correct translation is <b>Mainiton</b>.</string>


    //buttons
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="next">next</string>
    <string name="buy">Buy</string>
    
    //ThreeEight
    <string name="btnUumaga">Umaga</string>
    <string name="btnHatinggabi">Hatinggabi</string>
    <string name="btnHaponpon">Hapon</string>



    //Oneone
    <string name="btnMaganda">Maganda</string>
    <string name="btnMabuti">Mabuti</string>
    <string name="btnMarami">Marami</string>

    //One-two
    <string name="btnMatibay">Matibay</string>
    <string name="btnSalamat">Salamat</string>

    //One-three
    <string name="btnAga">Marhay na aga</string>
    <string name="btnHapon">Marhay na hapon</string>
    <string name="btnBanggi">Marhay na banggi</string>

    //One-five
    <string name="btnPlease">please</string>
    <string name="btnSigi">sigi</string>
    <string name="btnBalik">balik</string>

    //One-eigth
    <string name="btnPaalam">paalam</string>
    <string name="btnKumusta">kumusta</string>
    <string name="btnPahiram">pahiram</string>


    //One-thirteen
    <string name="btnUmaga">Magandang Umaga</string>
    <string name="btnHaponT">Magandang hapon</string>
    <string name="btnGabi">Magandang gabi</string>


    //Two-Two
    <string name="btnDuo">Duo</string>
    <string name="btnDuwa">Duwa</string>
    <string name="btnDiit">Diit</string>

    //Two-Five
    <string name="btnManiwang">Maniwang</string>
    <string name="btnDakol">Dakol</string>
    <string name="btnDakula">Dakula</string>
    <string name="btnSampulu">Sampulu</string>


    //Three-three
    <string name="btnKahapon">Kahapon</string>
    <string name="btnBukas">Bukas</string>
    <string name="btnMamaya">Mamaya</string>



    //Three-five
    <string name="btnUmagaga">Umaga</string>
    <string name="btnKagabi">Kagabi</string>

    <string name="greet">Language Select</string>
    <string name="langselection">Select Language</string>
    <string-array name="languages">
        <item>Select language</item>
        <item>Filipino்</item>
        <item>English</item>
    </string-array>





    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
