<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="app.mobapp.android.pupkev.com.ling_o_ragon.SettingActivity">

    <TextView
        android:text="@string/txtSettings"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:textColor="#ffffff"
        android:id="@+id/txtSettings"
        android:clickable="false"
        android:backgroundTint="#000000ff"
        android:layout_marginTop="60dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:paddingStart="20dp"
        android:layout_gravity="center|top" />


    <Button
        android:layout_width="150dp"
        android:layout_height="55sp"
        android:text="@string/btnAbout"
        android:id="@+id/btnAbout"
        android:background="@drawable/paperbtn"
        android:textColor="#000000"
        android:textSize="20sp"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:layout_gravity="center" />

    <Button
        android:layout_width="200dp"
        android:layout_height="55sp"
        android:text="@string/btnFeedbackAndSuggestions"
        android:id="@+id/btnFeedbackAndSuggestions"
        android:background="@drawable/paperbtn"
        android:textColor="#000000"
        android:textSize="20sp"
        android:layout_below="@id/btnAbout"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_gravity="center"
        android:layout_marginTop="90dp" />

    <Button
        android:layout_width="150dp"
        android:layout_height="55sp"
        android:text="@string/btnLanguage"
        android:id="@+id/btnLanguage"
        android:background="@drawable/paperbtn"
        android:textColor="#000000"
        android:textSize="20sp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp" />

    <Button
        android:layout_width="150sp"
        android:layout_height="55sp"
        android:text="@string/tutorial"
        android:id="@+id/btnTutorial"
        android:background="@drawable/paperbtn"
        android:textColor="#000000"
        android:textSize="20sp"
        android:layout_below="@id/btnAbout"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_gravity="center"
        android:layout_marginTop="160dp" />

</FrameLayout>
