<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="app.mobapp.android.pupkev.com.ling_o_ragon.FeedbackActivity">


    <TextView
        android:text="@string/btnFeedbackAndSuggestions"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:textColor="#ffffff"
        android:id="@+id/txtFeedback"
        android:clickable="false"
        android:backgroundTint="#000000ff"
        android:layout_marginTop="60dp"
        android:textSize="25dp"
        android:textStyle="bold"
        android:paddingStart="20sp"
        android:layout_gravity="center|top" />

    <TextView
        android:text="@string/txtTell"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:textColor="#ffffff"
        android:id="@+id/txtTell"
        android:clickable="false"
        android:backgroundTint="#000000ff"
        android:layout_marginTop="145dp"
        android:textSize="14dp"
        android:paddingStart="20sp" />

    <TextView
        android:text="@string/txtHelp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:textColor="#ffffff"
        android:id="@+id/txtHelp"
        android:clickable="false"
        android:backgroundTint="#000000ff"
        android:layout_marginTop="170dp"
        android:textSize="14dp"
        android:paddingStart="20sp" />


    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/message"
        android:layout_marginRight="10dp"
        android:lines="5"
        android:textSize="16sp"
        android:maxLines="10"
        android:nestedScrollingEnabled="false"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="80dp"
        android:gravity="start|top" />


    <Button
        android:layout_width="190dp"
        android:layout_height="60dp"
        android:text="@string/btnSend"
        android:id="@+id/btnSend"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:background="@drawable/paperbtn"
        android:textColor="#000000"
        android:layout_alignParentLeft="true"
        android:textSize="20dp"
        android:layout_gravity="center"
        android:layout_marginTop="190dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/subject"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:textSize="16sp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="Subject"
        android:textIsSelectable="false"
        android:textColorHint="#F08080" />


</FrameLayout>
